Restored ability to call custom APIs by name. Removed hidden BOM from template (how did that get there, looking at you VSCode)

--- a/templates/Serverville.cs.tmpl
+++ b/templates/Serverville.cs.tmpl
@@ -99,6 +99,14 @@ namespace Serverville
 			return UserInfo;
 		}
 
+        public void ApiByName<ReqType,ReplyType>(string api, ReqType request, Action<ReplyType> onSuccess, OnErrorReply onErr)
+		{
+			Transport.CallAPI<ReplyType>(api, request,
+				onSuccess,
+				onErr
+            ); 
+		}
+        
 {{APIs}}
 
 	}
